Fri Sep 14 15:10:39 BST 2007  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Reorder the testdata/flint-x.y.z files
	  consistently.

Fri Sep 14 12:48:04 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* configure.ac: Add "tar-ustar" option to AM_INIT_AUTOMAKE.  This
	  is needed to avoid a failure of make dist due to filepaths of
	  more than 99 characters (in the generated documentation: the
	  relevant filepaths are for the NumberValueRangeProcessor class,
	  and extend to 103 characters).  Automake documentation implies
	  that tar-v7 is the default format, which doesn't support
	  filepaths longer than 99 characters portably; ustar allows 256
	  characters.  The automake documentation says that the ustar
	  format "is believed to be old enough to be portable"; if we come
	  across problems due to the format change we could consider
	  renaming files to reduce the filepath length.
	* tests/Makefile.am: Remove
	  testdata/flint-1.0.2/{value,position}.{baseA,DB} from
	  distribution, since they don't actually exist.  Fixes make dist.

Fri Sep 14 10:45:35 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_cursor.cc,backends/flint/flint_cursor.h: Add
	  FlintCursor::find_entry_gt(), and use it instead of
	  flint_entry_ge() in FlintCuror::del().  This fixes failure of
	  deldoc4 test.  I'm not sure why find_entry() can return true
	  immediately after the key it's searching for was deleted with
	  B->del(), though: that merits further investigation.

Fri Sep 14 04:57:14 BST 2007  Olly Betts <olly@survex.com>

	* bin/xapian-inspect.cc: Avoid comparing char with 0 - on platforms
	  where char is unsigned by default this can give a compiler warning.

Fri Sep 14 03:40:18 BST 2007  Olly Betts <olly@survex.com>

	* bin/xapian-compact.cc: Removed unused variable.

Fri Sep 14 01:56:36 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_alltermslist.cc: Fix comment typo.
