@@ -221,13 +221,6 @@ class XAPIAN_VISIBILITY_DEFAULT FlintCursor {
 	    return false;
 	}
 
-	/// Position the cursor on the lowest entry with key > @a key.
-	void find_entry_gt(const string &key) {
-	    find_entry(key);
-	    next();
-	}
-
-
 	/** Set the cursor to be off the end of the table.
 	 */
 	void to_end() { is_after_end = true; }
@@ -241,8 +234,10 @@ class XAPIAN_VISIBILITY_DEFAULT FlintCursor {
 
 	/** Delete the current key/tag pair, leaving the cursor on the next
 	 *  entry.
+	 *
+	 *  @return false if the cursor ends up unpositioned.
 	 */
-	void del();
+	bool del();
 
 	/// Return a pointer to the FlintTable we're a cursor for.
 	FlintTable * get_table() const { return B; }
